--- a/.github/workflows/test-and-build.yml
+++ b/.github/workflows/test-and-build.yml
@@ -34,8 +34,22 @@ jobs:
       - name: Check code formatting
         run: npm run format:check
 
+      - name: Create reports directory
+        run: mkdir -p reports/jest
+
       - name: Run unit tests
         run: npm run test:unit:ci
+
+
+      - name: List all files after test
+        run: |
+          echo "=== Root directory ==="
+          ls -la
+          echo "=== Reports directory ==="
+          find . -name "*.xml" -type f 2>/dev/null || echo "No XML files found anywhere"
+          echo "=== Check if reports dir exists ==="
+          ls -la reports/ 2>/dev/null || echo "Reports directory doesn't exist"
+        if: always()
 
       - name: Build application
         run: npm run build-prod
