feature: Run playwright snapshot tests in docker for consistency (#555)
* feat: properly replace quotation marks (#346)

* chore(release): 1.11.0-rc.6

## [1.11.0-rc.6](https://github.com/paste-perfect/paste-perfect/compare/v1.11.0-rc.5...v1.11.0-rc.6) (2025-06-04)

### Bug Fixes

* **version:** removed redundant version info ([98123cd](https://github.com/paste-perfect/paste-perfect/commit/98123cd39270b7e5a9957a5b61b2aaf580bdcf64))

* chore: improved import

* fix(ci): fixed prerelease condition name

* chore(release): 1.11.0-rc.7

## [1.11.0-rc.7](https://github.com/paste-perfect/paste-perfect/compare/v1.11.0-rc.6...v1.11.0-rc.7) (2025-06-05)

### Build System

* improved import ([d4d705e](https://github.com/paste-perfect/paste-perfect/commit/d4d705e453aa58f38a04dd272b0d7ef67df597b2))

### Bug Fixes

* **ci:** fixed prerelease condition name ([ee95e06](https://github.com/paste-perfect/paste-perfect/commit/ee95e06818567ee5be825b4d198707ad1e65f867))

* fix(ci): typo

* fix(ci): swapped prerelease event around

* chore(release): 1.11.0-rc.8

## [1.11.0-rc.8](https://github.com/paste-perfect/paste-perfect/compare/v1.11.0-rc.7...v1.11.0-rc.8) (2025-06-05)

### Bug Fixes

* **ci:** swapped prerelease event around ([d67449e](https://github.com/paste-perfect/paste-perfect/commit/d67449eb2bd74fb6ca4064c8ac3b8605078c509a))
* **ci:** typo ([ba6412b](https://github.com/paste-perfect/paste-perfect/commit/ba6412b4201993b134cf75533ebf870f4117fe69))

* chore(release): 1.12.0-rc.1

## [1.12.0-rc.1](https://github.com/paste-perfect/paste-perfect/compare/v1.11.0...v1.12.0-rc.1) (2025-06-05)

### Build System

* **release:** 1.10.0-rc.59 ([576c5e9](https://github.com/paste-perfect/paste-perfect/commit/576c5e96f613aaed2c90fa236e4508354455b230))
* **release:** 1.10.0-rc.60 ([2f470cb](https://github.com/paste-perfect/paste-perfect/commit/2f470cb64dcc25cf1987d21e0eb5e749a0bfe84d))
* **release:** 1.10.0-rc.61 ([f08aaf3](https://github.com/paste-perfect/paste-perfect/commit/f08aaf373f522c8f

--- a/.github/workflows/test-and-build.yml
+++ b/.github/workflows/test-and-build.yml
@@ -34,6 +34,9 @@ jobs:
       - name: Check code formatting
         run: npm run format:check
 
+      - name: Create reports directory
+        run: mkdir -p reports/jest
+
       - name: Run unit tests
         run: npm run test:unit:ci
 
@@ -59,7 +62,7 @@ jobs:
         run: npm run test:snapshots
 
       - uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4  # upload test results
-        if: always()        # run this step even if previous step failed
+        if: ${{ !cancelled() }} # run this step even if previous step failed
         with:
           name: test-reports
           path: reports/
@@ -70,17 +73,17 @@ jobs:
     needs: test-and-build
 
     steps:
-    - name: Generate JEST tet
-      uses: dorny/test-reporter@dc3a92680fcc15842eef52e8c4606ea7ce6bd3f3 # v2
-      with:
-        artifact: test-reports
-        name: JEST Tests
-        path: 'jest/report.xml'
-        reporter: jest-junit
-    - name: Generate Snapshot test report
-      uses: dorny/test-reporter@dc3a92680fcc15842eef52e8c4606ea7ce6bd3f3 # v2
-      with:
-        artifact: test-reports
-        name: Snapshot Tests
-        path: 'playwright/report.xml'
-        reporter: jest-junit
+      - name: Generate JEST test report
+        uses: dorny/test-reporter@dc3a92680fcc15842eef52e8c4606ea7ce6bd3f3 # v2
+        with:
+          artifact: test-reports
+          name: JEST Tests
+          path: 'jest/report.xml'
+          reporter: jest-junit
+      - name: Generate Snapshot test report
+        uses: dorny/test-reporter@dc3a92680fcc15842eef52e8c4606ea7ce6bd3f3 # v2
+        with:
+          artifact: test-reports
+          name: Snapshot Tests
+          path: 'playwright/report.xml'
+          reporter: jest-junit
