--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "build-preview": "ng build --base-href /paste-perfect-test/ --configuration=production",
     "build-docker": "ng build --base-href / --configuration=production",
     "test": "npm run test:unit:coverage && npm run test:snapshots",
-    "test:unit:ci": "jest --ci",
+    "test:unit:ci": "jest --ci --coverage",
     "test:unit": "jest --verbose",
     "test:unit:watch": "jest --verbose --watch",
     "test:unit:coverage": "jest --coverage",
-    "test:snapshots": "npx playwright test",
-    "test:snapshots:update-snapshots": "npx playwright test --update-snapshots",
+    "test:snapshots": "./playwright-screenshot.sh test",
+    "test:snapshots:watch": "./playwright-screenshot.sh test --ui",
+    "test:snapshots:update-snapshots": "./playwright-screenshot.sh test --update-snapshots",
     "lint:check": "ng lint",
     "lint:fix": "ng lint --fix",
     "format:check": "prettier --check 'src/**/*.{ts,js,json,html,scss}'",
