fix: limit release note length

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -143,7 +143,9 @@
           "noteKeywords": ["BREAKING CHANGE", "BREAKING CHANGES", "BREAKING"]
         },
         "writerOpts": {
-          "commitsSort": ["subject", "scope"]
+          "commitsSort": ["subject", "scope"],
+          "maxSubjectLength": 100,
+          "commitLimit": 50
         }
       }
     ],
