--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "paste-perfect",
-  "version": "2.1.0",
+  "version": "2.2.0-rc.2",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -10,13 +10,14 @@
     "build-prod": "ng build --base-href /paste-perfect/ --configuration=production",
     "build-preview": "ng build --base-href /paste-perfect-test/ --configuration=production",
     "build-docker": "ng build --base-href / --configuration=production",
-    "test": "npm run test:unit && npm run test:snapshots",
-    "test:unit:ci": "jest --ci",
+    "test": "npm run test:unit:coverage && npm run test:snapshots",
+    "test:unit:ci": "jest --ci --coverage",
     "test:unit": "jest --verbose",
     "test:unit:watch": "jest --verbose --watch",
-    "test:coverage": "jest --coverage",
-    "test:snapshots": "npx playwright test",
-    "test:snapshots:update-snapshots": "npx playwright test --update-snapshots",
+    "test:unit:coverage": "jest --coverage",
+    "test:snapshots": "./playwright-screenshot.sh test",
+    "test:snapshots:watch": "./playwright-screenshot.sh test --ui",
+    "test:snapshots:update-snapshots": "./playwright-screenshot.sh test --update-snapshots",
     "lint:check": "ng lint",
     "lint:fix": "ng lint --fix",
     "format:check": "prettier --check 'src/**/*.{ts,js,json,html,scss}'",
@@ -25,15 +26,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^19.2.2",
-    "@angular/compiler": "^19.2.2",
-    "@angular/core": "^19.2.2",
-    "@angular/forms": "^19.2.2",
-    "@angular/platform-browser": "^19.2.2",
-    "@angular/platform-browser-dynamic": "^19.2.2",
-    "@angular/router": "^19.2.2",
-    "@prettier/plugin-php": "^0.22.4",
-    "@primeng/themes": "^19.1.3",
+    "@angular/common": "^20.3.2",
+    "@angular/compiler": "^20.3.2",
+    "@angular/core": "^20.3.2",
+    "@angular/forms": "^20.3.2",
+    "@angular/platform-browser": "^20.3.2",
+    "@angular/platform-browser-dynamic": "^20.3.2",
+    "@angular/router": "^20.3.2",
+    "@primeng/themes": "^20.0.0",
     "@types/prismjs": "^1.26.5",
     "angular-prism": "^0.1.20",
     "jest-junit": "^16.0.0",
@@ -46,7 +46,7 @@
     "prettier-plugin-sql": "^0.19.1",
     "prettier-plugin-toml": "^2.0.5",
     "primeicons": "^7.0.0",
-    "primeng": "^19.1.3",
+    "primeng": "^20.0.0",
     "prismjs": "^1.30.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -54,23 +54,24 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.3",
-    "@angular/cli": "^19.2.4",
-    "@angular/compiler-cli": "^19.2.2",
+    "@angular/build": "^20.3.3",
+    "@angular/cli": "^20.3.3",
+    "@angular/compiler-cli": "^20.3.2",
     "@playwright/test": "^1.51.1",
     "@semantic-release/commit-analyzer": "^13.0.1",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^11.0.1",
     "@semantic-release/npm": "^12.0.1",
     "@semantic-release/release-notes-generator": "^14.0.3",
-    "@types/jest": "^29.5.14",
+    "@types/jest": "^30.0.0",
     "@types/node": "^22.13.11",
     "angular-eslint": "^20.0.0",
     "conventional-changelog-conventionalcommits": "^9.0.0",
     "eslint": "^9.22.0",
     "husky": "^9.1.7",
-    "jest": "^29.7.0",
-    "jest-preset-angular": "^14.5.3",
+    "jest": "^30.0.0",
+    "jest-environment-jsdom": "^30.0.0",
+    "jest-preset-angular": "^15.0.0",
     "lint-staged": "^16.0.0",
     "semantic-release": "^24.2.3",
     "ts-jest": "^29.3.0",
