refactor: :recycle: group dep updates in renovate

--- a/renovate.json
+++ b/renovate.json
@@ -2,19 +2,21 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "config:best-practices",
-    ":semanticCommitTypeAll(refactor)",
-    ":automergeRequireAllStatusChecks",
     ":automergeDigest",
-    ":automergeMinor",
     ":automergeLinters",
-    ":preserveSemverRanges",
-    "workarounds:all",
+    ":automergeMinor",
+    ":automergeRequireAllStatusChecks",
     ":configMigration",
-    "security:openssf-scorecard",
+    ":enablePreCommit",
+    ":enableVulnerabilityAlerts",
+    "group:allNonMajor",
+    "group:monorepos",
+    ":preserveSemverRanges",
     "replacements:all",
     "security:minimumReleaseAgeNpm",
-    ":enablePreCommit",
-    ":enableVulnerabilityAlerts"
+    "security:openssf-scorecard",
+    ":semanticCommitTypeAll(refactor)",
+    "workarounds:all"
   ],
   "baseBranchPatterns": ["dev"],
   "customManagers": [
