refactor: optimize docker build speed

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,14 +1,16 @@
-highlighting-screenshots/
-.git/
-.github/
+CONTRIBUTING.md
 docker/
 .dockerignore/
 .editorconfig
+.husky
+eslint.config.js
+.git/
+.github/
 .gitignore
+highlighting-screenshots/
+LICENSE
 node_modules/
 .prettierignore
 .prettierrc.json
-CONTRIBUTING.md
-LICENSE
 README.md
-eslint.config.js
+tests/
