--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -26,7 +26,6 @@ permissions:
   packages: write
   security-events: write
 
-
 jobs:
   docker:
     runs-on: ubuntu-latest
@@ -37,7 +36,7 @@ jobs:
       - name: Set IMAGE_NAME
         run: echo "IMAGE_NAME=ghcr.io/${REPO,,}" >> $GITHUB_ENV
         env:
-          REPO: '${{ github.repository }}'
+          REPO: "${{ github.repository }}"
 
       - name: Docker meta
         id: meta
@@ -85,7 +84,7 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          platforms: linux/amd64,linux/arm/v7,linux/arm64/v8
+          platforms: linux/amd64
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -94,7 +93,7 @@ jobs:
         if: ${{ github.event_name != 'pull_request' }}
         with:
           image-ref: "${{ env.IMAGE_NAME }}:sha-${{ github.sha }}"
-          format: 'sarif'
+          format: "sarif"
           output: "trivy-results-docker.sarif"
           severity: "CRITICAL,HIGH,MEDIUM"
 
