--- a/.releaserc.json
+++ b/.releaserc.json
@@ -165,7 +165,7 @@
     [
       "@semantic-release/git",
       {
-        "message": "chore(release): ${nextRelease.version}\n\n${nextRelease.notes}"
+        "message": "chore(release): ${nextRelease.version} [skip ci]"
       }
     ]
   ]
