fix(CI): do not use automerge

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,6 +41,7 @@ jobs:
         if: github.ref == 'refs/heads/main'
         run: |
           gh pr create --base dev --head main --title "Auto-Update dev branch after Release" --fill
-          gh pr merge main --auto --merge
+          sleep 5
+          gh pr merge main --merge
         env:
           GH_TOKEN: ${{ secrets.SEMANTIC_RELEASE }}
