--- a/renovate.json
+++ b/renovate.json
@@ -19,6 +19,18 @@
     "workarounds:all"
   ],
   "baseBranchPatterns": ["dev"],
+  "schedule": ["before 6am on monday"],
+  "timezone": "UTC",
+  "prConcurrentLimit": 10,
+  "prHourlyLimit": 5,
+  "packageRules": [
+    {
+      "description": "Security updates can run immediately",
+      "matchPackagePatterns": ["*"],
+      "vulnerabilityAlerts": true,
+      "schedule": ["at any time"]
+    }
+  ],
   "customManagers": [
     {
       "customType": "regex",
