Revert "fix: only run on pushes to branches to prevent duplicated runs"
This reverts commit 393766c4c2274c9961f1edda52ef0e1c48be6fbe.

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -10,11 +10,16 @@ on:
       - "v*.*.*"
   push:
     branches:
-      - "*"
+      - main
+      - dev
     tags:
       - "v*.*.*"
   release:
     types: [published]
+  pull_request:
+    branches:
+      - "main"
+      - "dev"
 
 permissions:
   contents: read
