Change PR merge strategy to squash merge

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,8 +45,8 @@ jobs:
         run: |
           gh pr create --base dev --head main --title "Auto-Update dev branch after Release" --fill || echo "PR already exists! Trying merge..."
           sleep 5
-          # Queue the PR to merge automatically once checks pass
-          gh pr merge main --merge --auto
+          # Queue the PR to squash merge automatically once checks pass
+          gh pr merge main --squash --auto
         env:
           GH_TOKEN: ${{ secrets.SEMANTIC_RELEASE }}
       - name: Create PR to create upcoming release
