Refactor PR creation and auto-merge for release sync
Updated the PR creation and merging process for syncing changes from main to dev after a release.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,10 +43,14 @@ jobs:
       - name: Create PR to update dev branch
         if: github.ref == 'refs/heads/main'
         run: |
-          gh pr create --base dev --head main --title "chore(release): Auto-Update dev branch after Release" --fill || echo "PR already exists! Trying merge..."
-          sleep 5
-          # Queue the PR to squash merge automatically once checks pass
-          gh pr merge main --squash --auto
+          # 1. Create the Pull Request
+          gh pr create --base dev --head main \
+            --title "chore(sync): update dev with latest release from main" \
+            --body "Syncing changes from main back to dev following a release." \
+            || echo "PR creation failed or PR already exists."
+
+          # 2. Set Auto-Merge
+          gh pr merge main --auto --merge --delete-branch=false
         env:
           GH_TOKEN: ${{ secrets.SEMANTIC_RELEASE }}
       - name: Create PR to create upcoming release
